# Proyek-Alpro

./: README.md  main.cpp  mainwindow.cpp  mainwindow.h
to do list/: CMakeLists.txt  dh ada tambahan fitur dan save  mainwindow.cpp  mainwindow.h  tambahan.h
